src/App.css
/* ... */
.work {
  display: grid;
  grid-template-columns: 1.5fr 4fr;
  column-gap: 4vmin;
  margin: 4vmin;
  padding: 1.5vmin;
  background: rgb(225, 225, 243);
  color: black;
  border: 1px solid rgb(35, 66, 206);
  border-radius: 10px;
  box-shadow: 0 10px 10px 0 rgba(3, 2, 2, 0.2), 0 6px 20px 0 rgba(2, 1, 1, 0.19);
  transition: 0.2s;
}

.work:hover {
  transform: scale(1.05);
}

.work-icon {
  display: flex;
  justify-content: center;
  align-items: center;

}

.work-logo {
  max-width: 20vmin;
  max-height: 20vmin;
  /* object-fit: cover; */
  /* box-shadow: 0 10px 10px 0 rgba(3, 2, 2, 0.2), 0 6px 10px 0 rgba(2, 1, 1, 0.19); */
}

.work-description h3 {
  font-size: 3.3vmin;
}

.work-description {
  padding: 1vh 0vh;
  font-size: 2vmin;
}

.work-description ul li {
  margin-bottom: 1vh;
}

/* svg animation */
#tie {
  animation: tie 2s infinite ease-in-out;
  transform-origin: 50% 62%;
}
@keyframes tie {
  0%, 100% {
    transform: rotate(0);
  }
  50% {
    transform: skew(-12deg) rotate(-6deg);
  }
}

/* ##################### Projects ######################## */

.projects {
  color: white;
  width: 100%;
  position: relative;
  z-index: 1;
}

#project {
  height: 10vh;
}

.project-title h1 {
  font-size: 5vh;
  font-weight: 100;
  text-align: center;
  margin-bottom: 4vh;
  color: var(--title-color);
  font-family: Georgia, "Times New Roman", Times, serif;
  margin: 5vh 2vw;
  padding-bottom: 2vh;
  border-bottom: 2px solid rgb(173, 171, 171);
}

.projects-data {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 10vh;
}

.category {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 15vh;
  width: 60%;
  display: none;
}

.category button {
  padding: 5px;
  margin: 10px;
  font-size: 1.2rem;
  display: none;
}

.projects-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  row-gap: 40px;
  column-gap: 40px;
  margin: auto;
}

.project {
  background: #fcf7f6;
  box-shadow: 0 5px 10px 0 rgba(3, 2, 2, 0.2), 0 6px 20px 0 rgba(2, 1, 1, 0.19);
  padding: 2px;
  color: #141111;
  cursor: pointer;
  margin: auto;
  border-radius: 10px;
  border: 2px solid rgb(23, 6, 114);
}

.image-data {
  position: relative;
}

.static {
  width: 45vmin;
  height: 35vmin;
  margin: auto;
  border-radius: 10px;
  object-fit: cover;
}

.active {
  display: none;
}

.image-data:hover .static {
  display: none;
}

.image-data:hover .active {
  display: block;
  width: 45vmin;
  height: 35vmin;
  margin: auto;
  border-radius: 10px;
  filter: blur(1px);
}

.overlay {
  position: absolute;
  bottom: 0;
  width: 45vmin;
  background: rgba(0, 0, 0, 0.616);
  /* Black see-through */
  color: #f1f1f1;
  transition: 0.5s all ease;
  opacity: 0;
  color: white;
  font-size: 2.5vmin;
  padding: 2.5vmin;
  text-align: center;
}

.overlay a {
  text-decoration: none;
  color: white;
  background: rgba(129, 129, 133, 0.788);
  padding: 2vmin;
  border: 1px solid white;
  border-radius: 5px;
}

.project:hover .overlay {
  opacity: 1;
}

.project-caption {
  width: 45vmin;
  margin: auto;
  color: rgb(2, 2, 0);
  text-align: center;
}

.project-caption h3 {
  font-size: 3.2vmin;
  padding-top: 1vh;
}

.project-caption p {
  font-size: 2vmin;
}

.tools-used {
  color: rgb(77, 75, 75);
  font-size: 1.8vmin;
}

/* ######################### Contact ####################### */

.contact-page {
  color: var(--primary-white);
  padding-top: 10vh;
  position: relative;
  z-index: 1;
}

.contact-title {
  text-align: center;
  font-weight: 300;
  font-size: 5vh;
  padding: 3vh;
  color: var(--title-color);
  font-family: Georgia, "Times New Roman", Times, serif;
  margin: 5vh 2vw;
  padding-bottom: 2vh;
  border-bottom: 2px solid rgb(173, 171, 171);
}

.contact-body {
  margin: auto;
  width: 70%;
}

.contact-text {
  text-align: center;
  font-size: 2.1vh;
  padding: 2vh;
}

.contact-text p {
  padding: 1vh;
  font-family: Georgia, "Times New Roman", Times, serif;
}

.contact-items {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1vh 4vh 10vh 2vh;
  border-radius: 15px;
}

.contact-info {
  padding: 1vh 0vh 0vh 4vh;
  font-size: 2vh;
}

.contact-info span {
  padding-left: 2vh;
}

.contact-info a {
  color: var(--primary-white);
}

.footer {
  background: var(--footer-background);
  color: rgb(161, 159, 159);
  font-size: 1.6vh;
  height: 8vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* ##################### Media Queries ###################### */
@media screen and (max-height: 1400px) {
  .about-contents p {
    font-size: 1.9vh;
  }

}

@media (min-aspect-ratio: 16/10) {
  .projects-list {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media screen and (max-width: 1024px) {
  .education_svg {
    display: none;
  }

  .education-data {
    width: 80%;
    margin: auto;
  }

}

@media screen and (max-width: 850px) {
  .header-top h1 {
    font-size: 9vmin;
  }

  .header-top p {
    font-size: 2.5vmin;
  }

  .school {
    grid-template-columns: 1fr;
    width: 90%;
  }

  .work {
    grid-template-columns: 1fr;
    width: 90%;
  }

  .about-contents p {
    font-size: 1.8vmax;
  }

  .contact-body {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 80%;
  }

  .contact-items {
    align-self: center;
    margin-bottom: 30px;
    margin-right: 0px;

  }

  .education_svg {
    display: none;
  }

  .education-data {
    width: 80%;
    margin: auto;
  } 

}

@media screen and (max-width: 800px) {
  .projects-list {
    display: grid;
    grid-template-columns: 1fr;
  }

}

@media screen and (max-height: 700px) {
  .about-contents p {
    font-size: 1.7vh;
  }

}

@media screen and (max-width: 450px) {
  .education-data {
    width: 90%;
  }

  .contact-body {
    width: 100%;
  }

  .about-contents p {
    font-size: 0.6rem;
  }
}
/* ... */

